--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
   },
   "devDependencies": {
+      "vows" : ">= 0.6.2"
+    , "wrench" : ">= 1.3.7"
   },
   "keywords": ["sshfs", "filesystem", "ssh", "remote"],
   "repository": {
