--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
       "vows" : ">= 0.6.2"
     , "wrench" : ">= 1.3.7"
+    , "underscore" : ">= 1.3.1"
   },
   "keywords": ["sshfs", "filesystem", "ssh", "remote"],
   "repository": {
