--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "contributors": [
   ],
   "dependencies": {
+      "coffee-script" : ">= 1.3.3"
   },
   "devDependencies": {
       "vows" : ">= 0.6.2"
     , "wrench" : ">= 1.3.7"
     , "underscore" : ">= 1.3.1"
-    , "coffee-script" : ">= 1.3.3"
   },
   "keywords": ["sshfs", "filesystem", "ssh", "remote"],
   "repository": {
