--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "contributors": [
   ],
   "dependencies": {
-      "coffee-script" : ">= 1.3.3"
+    "coffee-script": ">= 1.3.3"
   },
   "devDependencies": {
-      "vows" : ">= 0.6.2"
-    , "wrench" : ">= 1.3.7"
-    , "underscore" : ">= 1.3.1"
+    "vows": ">= 0.6.2"
+    , "wrench": ">= 1.3.7"
+    , "underscore": ">= 1.3.1"
+    , "markdox": ">= 0.0.5"
   },
   "keywords": ["sshfs", "filesystem", "ssh", "remote"],
   "repository": {
@@ -20,6 +21,9 @@
   },
   "main": "index",
   "license": "MIT",
-  "scripts": { "test": "./node_modules/vows/bin/vows test/*-test.coffee --spec" },
+  "scripts": { 
+    "test": "./node_modules/vows/bin/vows test/*-test.coffee --spec"
+    , "documentation": "./node_modules/markdox/bin/markdox -o doc/api.md lib/sshfs-node.coffee"
+  },
   "engines": { "node": ">= 0.6.8 < 0.7.0" }
 }
